--- a/content/uses.org
+++ b/content/uses.org
@@ -5,23 +5,49 @@ See [[https://uses.tech/][here]] for context
 * Development tools
 ** Editor
 
-[[https://github.com/hlissner/doom-emacs][Doom Emacs]] is my current [[https://www.gnu.org/software/emacs/][Emacs]] distribution of choice
+[[https://github.com/hlissner/doom-emacs][Doom Emacs]] is my current [[https://www.gnu.org/software/emacs/][Emacs]] distribution of choice.
 
-I'm still relatively new to the ecosystem so if I find myself frustrated or want to make a quick edit, I'll generally reach for [[https://code.visualstudio.com/][VS Code]], [[https://www.sublimetext.com/][Sublime Text]] or [[https://neovim.io/][nvim]]
+I use ~evil-mode~ which means Emacs is controlled with ~vim~ keybindings.
 
-** Terminal
+Whenever I don't feel like using Emacs, or don't have it installed, I usually reach for [[https://www.sublimetext.com][Sublime Text]], [[https://neovim.io][neovim]] or even [[https://www.nano-editor.org/][nano]]
 
-- macOS: Terminal with minimal configuration
-- Windows: Windows Terminal or stock Ubuntu WSL
+I have no issue with [[https://code.visualstudio.com][VS Code]] and it's a great tool but there's generally nothing I can't already do in a different editor so 🤷‍♀️
 
-I use stock [[https://en.wikipedia.org/wiki/Z_shell][zsh]] (not oh-my-zsh) with a profile that is shared across all of my development environments via Git
+* Hardware
 
-I'm looking at switching back to [[https://fishshell.com/][fish]] shortly and ideally having my configuration kept as a literate document ([[https://www.gnu.org/software/emacs/manual/html_node/org/Extracting-source-code.html][tangled]] by Emacs)
+** Home
+*** Desktop
+A decently powerful custom built desktop running [[https://pop.system76.com/][Pop!_OS]]. It's a really nice Linux distribution, based on Ubuntu, and I highly recommend giving it a try if you're looking for something new.
 
-For both of my Windows environments, I do all of my development using version 2 of the [[https://docs.microsoft.com/en-us/windows/wsl/faq][Windows Subsystem for Linux]]
+*** Laptop
+I generally use a [[https://support.apple.com/kb/sp715?locale=en_NZ][MacBook Pro 13-inch (2015)]] for any personal projects and general browsing.
+*** Phone
 
-** Hardware
+I swear I have ADHD when it comes to phones.
 
-- Work laptop: [[https://store.hp.com/us/en/pdp/hp-zbook-studio-g5-mobile-workstation-customizable-2yn59av-mb][HP ZBook Studio G5]] running Windows 10 Enterprise
-- Home laptop: [[https://support.apple.com/kb/sp715][Macbook Pro 13 (Early 2015)]] running [[https://www.apple.com/macos/big-sur-preview/][macOS Big Sur]] Developer Preview
-- Home desktop: Custom built running Windows 10 Pro Insiders
+Currently, I'm using a [[https://www.samsung.com/nz/smartphones/galaxy-s20/buy/][Samsung Galaxy S20]] running [[https://www.android.com/android-10/][Android 10]] and [[https://play.google.com/store/apps/details?id=bitpit.launcher&hl=en][Niagara Launcher]]
+
+It's actually pretty nice considering Samsung UX can often be a little hit or miss.
+
+** Work
+*** Laptop
+
+Currently I'm using a [[https://support.apple.com/kb/SP795?locale=en_NZ][MacBook Pro 13-inch (2019)]] as my daily driver for work.
+
+It's a placeholder while I wait for my intended laptop to arrive from overseas. I think it's a 2020 Macbook Pro but no idea what kind of configuration.
+
+*** Phone
+
+For my work phone, I'm using an [[https://www.apple.com/nz/iphone-se/][iPhone SE (2020)]]
+
+It's under its own apple account as is the laptop above to save my work tabs mixing up with my home tabs
+
+* Software
+
+** Shell
+
+Often I switch around a bit but I'm currently running stock [[https://en.wikipedia.org/wiki/Z_shell][zsh]]
+
+Stock in the sense that I'm not running Oh My Zsh! but rather just a small [[https://github.com/marcus-crane/dotfiles/blob/master/zsh/zshrc.org][handwritten configuration file]].
+
+I'm not running anything fancy as far as terminals: stock macOS terminal and whatever ships with Pop!_OS by default.
