--- a/content/notes/macos.org
+++ b/content/notes/macos.org
@@ -41,3 +41,24 @@ As you can see, the ~Home~ network is now selected.
 I only recently discovered this tool so I haven't automated it yet but it's probably feasible to have a file with your working hours and then if it's within those hours, toggle on the ~Work~ network (and all of the proxy configuration that comes with it)
 
 The reason you might want to use a schedule and not eg; WiFi name is that you might be working from home over a VPN for example.
+* How can I run a Homebrew application being blocked by Gatekeeper?
+
+This issue is particularly annoying and I only just discovered it today for the first time.
+
+Here's an example of what it looks like
+
+[pic]
+
+In order to install the application so that it bypasses Gatekeeper, you can rerun ~brew cask install~ like so:
+
+#+begin_src shell
+> brew cask install --no-quarantine blah
+> brew reinstall --no-quarantine blah
+#+end_src
+
+If you'd like to keep this flag enabled all the time, and honestly you might as well, you can also do the following:
+
+#+begin_src shell
+> export HOMEBREW_CASK_OPTS="--no-quarantine"
+> brew cask install blah
+#+end_src
