--- a/content/notes/macos.org
+++ b/content/notes/macos.org
@@ -47,7 +47,7 @@ This issue is particularly annoying and I only just discovered it today for the 
 
 Here's an example of what it looks like
 
-[pic]
+[[../img/macos/gatekeeper.png][file:../img/macos/gatekeeper.png]]
 
 In order to install the application so that it bypasses Gatekeeper, you can rerun ~brew cask install~ like so:
 
