--- a/content/notes/macos.org
+++ b/content/notes/macos.org
@@ -1,5 +1,5 @@
 #+title: macOS
-#+date: 2020-09-09
+#+date: 2020-09-15
 #+tags[]: macos os cheatsheet
 
 {{< toc >}}
@@ -62,3 +62,37 @@ If you'd like to keep this flag enabled all the time, and honestly you might as 
 > export HOMEBREW_CASK_OPTS="--no-quarantine"
 > brew cask install blah
 #+end_src
+
+* How can I hide folders in my Home directory?
+
+If you've ever seen those pesky default folders like ~Public~ and ~Movies~, the good news is that you can get rid of them.
+
+You can't, or more specifically, you shouldn't fully delete them as some applications may assume their existence but you can get close enough.
+
+Let's say we want to hide ~Public~, you can hide it from Finder like so:
+
+#+begin_src shell
+chflags hidden ~/Public
+#+end_src
+
+The next time you navigate to your Home directory using Finder, you'll see that they've magically disappeared
+
+If you want to hide multiple at once, you can provide a comma delimited list:
+
+#+begin_src shell
+chflags hidden ~/{Downloads,Public}
+#+end_src
+
+If, for whatever reason, you wanted to block anyone or anything from accessing those folders as well, you could use ~chmod~ to do that:
+
+#+begin_src shell
+chmod 000 ~/{Downloads,Public}
+#+end_src
+
+Personally, I don't bother with this step but you might have a use for it.
+
+The one issue with the above is that you'll see those files appear in your Terminal and I don't know about you but that basically makes this whole exercise pointless.
+
+There are ways to do it but that's a story for another time.
+
+If I've forgotten to fill out this section and you're interested, send me an email which you can find on the [[/about][about]] page
