--- a/content/notes/linux.org
+++ b/content/notes/linux.org
@@ -1,11 +1,10 @@
 #+title: Linux
-#+date: 2020-09-08
+#+date: 2020-09-18
 #+tags[]: linux faqs
 
 {{< toc >}}
 
-* Questions
-** Why are dot files a thing?
+* Why are dot files a thing?
 
 Rob Pike explained his understanding in a now-dead Google+ post back in 2012. The use of ~.~ and ~..~ had appeared in early versions of the Unix file system, as a quick way to navigate around. They would appear when using ~ls~ to view the contents of a directory so a line was added that ignored anything where the first character was a period.
 
@@ -13,8 +12,7 @@ This, of course, meant that any files starting with a ~.~ were also hidden and s
 
 Rob also points out that configuration could just as easily be stored in ~$HOME/cfg~ or ~$HOME/lib~ as was the case in Plan 9. He doesn't dispute that dotfiles have their uses but emphasizes that the file itself serves the purpose. Prepending a dot does not a configuration file make.
 
-* Troubleshooting
-** Why do some of my applications suddenly get muted?
+* Why do some of my applications suddenly get muted?
 
 I recently ran into this issue when switching my distro to [[https://manjaro.org][Manjaro]].
 
@@ -40,3 +38,21 @@ While I'm not sure how long ~unload-module~ persists (I'm guessing until the nex
 #+end_src
 
 Once that's done, you should be good to go. It seems to work as expected for me anyway.
+* How can I get rid of the default application folders in eg; Nautilus?
+
+While you can delete stock folders such as ~Templates~, ~Public~ and so on, they'll still appear in the sidebar of your file explorer.
+
+The good news is that they're pretty easy to disable.
+
+Referring to the [[https://freedesktop.org/wiki/Software/xdg-user-dirs/#settings][xdg-user-dirs]] manual shows us that there is a configuration file of "well known" user directories that lives at ~$HOME/config/user-dirs.dirs~ by default
+
+Simply deleting the various entries inside might break a number of things but if you look closely, you'll spot that changing a directory to point to your home directory will disable it
+
+For example:
+
+#+begin_src shell
+> cat $HOME/.config/user-dirs/dirs
+XDG_TEMPLATES_DIR="$HOME" # templates is now disabled
+#+end_src
+
+This should cause the Templates folder to disappear from the sidebar of Nautilus although you might need to restart first.
