--- a/content/blog/internet-reliance.org
+++ b/content/blog/internet-reliance.org
@@ -12,7 +12,11 @@ Clearly, this isn't a new thought, and this post is being made up as I write it 
 
 Anyway, the first thing I heard when I walked in the door was "I'll be with you in 2 seconds, the internet has just gone out".
 
-To be quite clear, I like the hair stylist I go to. I hate haircuts so any observations are just that but naturally, I thought "What does that have to do with haircuts?"
+To be quite clear, I like the hair stylist I go to. I hate haircuts so any observations are just that but naturally, I thought
+
+#+begin_quote
+What does that have to do with haircuts?
+#+end_quote
 
 ---
 
@@ -50,7 +54,7 @@ In this case, I'm just talking about places with a comparable number of staff of
 
 At this point I'm just ranting about technology but this does bring me around to my second question:
 
-2) Is there, or should there be, such a thing as technology risk assessment for businesses?
+2) Is there, or should there be, such a thing as technology risk assessment/dependency modelling for businesses?
 
 This goes back to the mention of mental models but for your average business owner, I imagine you might not really understand that technology isn't a monolith? You've got disciplines ranging from wild west code slinging to "Just wrapped up a 7 month design trip visiting the wetlands of Croatia"
 
@@ -59,6 +63,8 @@ Bootstrap is fine, I don't hate Javascript for keeping me hostage and Zuck can g
 Taste in design isn't really a concern here but I can't help but wish there was some sort of crash course where people could work through hypotheticals like the above situation I described.
 
 I'm not really sure what to say here other than you can't really avoid engineering a single point of failure if you don't even know what that is.
+
+Also, if I was trying to run a business and focus on "what actually matters", I'd probably just think "Sounds boring/complicated/nerd crap" which is ironic given, you know, I'm writing this post.
 
 ---
 
