--- a/content/blog/25.md
+++ b/content/blog/25.md
@@ -1,9 +1,10 @@
-+++
-title = "25"
-date = "2019-08-19"
-slug = "25"
-tags = ["meta"]
-+++
+---
+title: "25"
+date: "2019-08-19"
+slug: "25"
+tags:
+- "meta"
+---
 
 It's 6:30pm on my 25th birthday and I've been reflecting a bit on what I've managed to accomplish so far. While this isn't a post about that, there's no better time to assess the state of my personal site and where I'd like to go forward.
 
